nav responsiveness adjusted, layout stretching fixed (</2025>)

--- a/style/global.css
+++ b/style/global.css
@@ -10,3 +10,8 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+*::before,
+*::after {
+    box-sizing: border-box;
+}
